--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <h2>Add</h2>
-    <input type="number" name="" id="number1" autofocus>
-    <input type="number" name="" id="number2">
-    <p id="answer">Answer: </p>
-    <button id="check" onclick="check()">Check</button> -->
-
-    q
-
+    <div id="body">
+        <div id="calculator-1">
+            <div id="text">
+                <h2>Calculator</h2>
+            </div>
+            <div id="inputs">
+                <input type="number" class="number" name="" id="number1" autofocus autocomplete="off">
+                <input type="number" class="number" name="" id="number2">
+            </div>
+            <p id="answer">Answer: </p>
+            <button id="check" onclick="check()">Check</button>
+        </div>
+        <div id="calculator-2">
+            q
+        </div>
+    </div>
     <script src="calculator.js"></script>
 </body>
 </html>
