--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -12,22 +12,35 @@
             <div id="text">
                 <h2>Calculator</h2>
             </div>
-            <div id="inputs">
-                <input type="number" class="number" name="" id="number1" autofocus autocomplete="off">
-                <input type="number" class="number" name="" id="number2">
-            </div>
             <div id="answer-fon">
+                <p id="bad"></p>
                 <p id="answer"></p>
             </div>
             <div id="buttons">
-                <div id="buttons-1">
-                    <button id="addition" class="bt1" onclick="c1()">+</button>
-                    <button id="subtraction" class="bt1" onclick="c2()">-</button>
-                    <button id="multiplication" class="bt1" onclick="c3()">*</button>
-                    <button id="division" class="bt1" onclick="c4()">/</button>
-                </div>
                 <div id="buttons-2">
-                    <button id="clear" class="bt2" onclick="c5()">Clear</button>
+                    <button id="clear" class="bt2" onclick="cl()">Clear</button>
+                    <button id="backspace" class="bt2" onclick="cb()">Backspace</button>
+                </div>
+                <div id="buttons-1">
+                    <button id="1" class="bt1" onclick="c1()">1</button>
+                    <button id="2" class="bt1" onclick="c2()">2</button>
+                    <button id="3" class="bt1" onclick="c3()">3</button>
+                    <button id="addition" class="bt1" onclick="ca()">+</button>
+                    <button id="4" class="bt1" onclick="c4()">4</button>
+                    <button id="5" class="bt1" onclick="c5()">5</button>
+                    <button id="6" class="bt1" onclick="c6()">6</button>
+                    <button id="subtraction" class="bt1" onclick="cs()">-</button>
+                    <button id="7" class="bt1" onclick="c7()">7</button>
+                    <button id="8" class="bt1" onclick="c8()">8</button>
+                    <button id="9" class="bt1" onclick="c9()">9</button>
+                    <button id="multiplication" class="bt1" onclick="cm()">*</button>
+                    <button id="rooting" class="bt1" onclick="cr()">.</button>
+                    <button id="0" class="bt1" onclick="c0()">0</button>
+                    <button id="exponentiation" class="bt1" onclick="ce()">^</button>
+                    <button id="division" class="bt1" onclick="cd()">/</button>
+                    <button id="right" class="bt1" onclick="cRl()">(</button>
+                    <button id="left" class="bt1" onclick="crL()">)</button>
+                    <button id="equals" class="bt2" onclick="ceq()">=</button>
                 </div>
             </div>
         </div>
