--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -13,34 +13,57 @@
                 <h2>Calculator</h2>
             </div>
             <div id="answer-fon">
-                <p id="bad"></p>
+                <p id="bad1"></p>
+                <p id="bad2"></p>
                 <p id="answer"></p>
             </div>
             <div id="buttons">
                 <div id="buttons-2">
-                    <button id="clear" class="bt2" onclick="cl()">Clear</button>
-                    <button id="backspace" class="bt2" onclick="cb()">Backspace</button>
+                    <div class="bt4">
+                        <button id="clear" class="bt2" onclick="cl()">Clear</button>
+                    </div>
+                    <div class="bt4">
+                        <button id="backspace" class="bt2" onclick="cb()">Backspace</button>
+                    </div>
                 </div>
                 <div id="buttons-1">
                     <button id="1" class="bt1" onclick="c1()">1</button>
                     <button id="2" class="bt1" onclick="c2()">2</button>
                     <button id="3" class="bt1" onclick="c3()">3</button>
-                    <button id="addition" class="bt1" onclick="ca()">+</button>
+                    <div class="bt5">
+                        <button id="addition" class="bt3" onclick="ca()">+</button>
+                    </div>
                     <button id="4" class="bt1" onclick="c4()">4</button>
                     <button id="5" class="bt1" onclick="c5()">5</button>
                     <button id="6" class="bt1" onclick="c6()">6</button>
-                    <button id="subtraction" class="bt1" onclick="cs()">-</button>
+                    <div class="bt5">
+                        <button id="subtraction" class="bt3" onclick="cs()">-</button>
+                    </div>
                     <button id="7" class="bt1" onclick="c7()">7</button>
                     <button id="8" class="bt1" onclick="c8()">8</button>
                     <button id="9" class="bt1" onclick="c9()">9</button>
-                    <button id="multiplication" class="bt1" onclick="cm()">*</button>
-                    <button id="rooting" class="bt1" onclick="cr()">.</button>
+                    <div class="bt5">
+                        <button id="multiplication" class="bt3" onclick="cm()">*</button>
+                    </div>
+                    <div class="bt5">
+                        <button id="rooting" class="bt3" onclick="cr()">.</button>
+                    </div>
                     <button id="0" class="bt1" onclick="c0()">0</button>
-                    <button id="exponentiation" class="bt1" onclick="ce()">^</button>
-                    <button id="division" class="bt1" onclick="cd()">/</button>
-                    <button id="right" class="bt1" onclick="cRl()">(</button>
-                    <button id="left" class="bt1" onclick="crL()">)</button>
-                    <button id="equals" class="bt2" onclick="ceq()">=</button>
+                    <div class="bt5">
+                        <button id="exponentiation" class="bt3" onclick="ce()">^</button>
+                    </div>
+                    <div class="bt5">
+                        <button id="division" class="bt3" onclick="cd()">/</button>
+                    </div>
+                    <div class="bt5">
+                        <button id="right" class="bt3" onclick="cRl()">(</button>
+                    </div>
+                    <div class="bt5">
+                        <button id="left" class="bt3" onclick="crL()">)</button>
+                    </div>
+                    <div class="bt4">
+                        <button id="equals" class="bt2" onclick="ceq()">=</button>
+                    </div>
                 </div>
             </div>
         </div>
