--- a/Weather/Weather.html
+++ b/Weather/Weather.html
@@ -7,27 +7,8 @@
     <link rel="stylesheet" href="Weather.css">
 </head>
 <body>
-    <div id="body">
-        <div id="input-fon">
-            <input id="input" type="text" autocomplete="off">
-            <button id="search" onclick="search()">search</button>
-            <p id="Feelslike"></p>
-            <p id="Humidity"></p>
-            <p id="Pressure_In"></p>
-            <p id="Wind_Dir"></p>
-            <p id="Wind"></p>
-            <p id="text"></p>
-            <p id="Day"></p>
-            <p id="Temp"></p>
-            <p id="Last_Updated"></p>
-            <p id="Localtime"></p>
-            <p id="Country"></p>
-            <p id="Region"></p>
-            <p id="Name"></p>
-            <img src="" id="Icon" alt="">
-            
-        </div> 
-    </div>  
+    <div id="fon-body">
+    </div>
     <script src="Weather.js"></script>
 </body>
 </html>
